Fix wrapping with multiple tags, embiggen tags, pretty icons

--- a/src-ui/src/styles.scss
+++ b/src-ui/src/styles.scss
@@ -71,7 +71,7 @@ body {
     position: relative;
     flex: 1 1 auto;
     margin-bottom: 0;
-    height: calc(1.5em + 0.75rem + 5px);
+    min-height: calc(1.5em + 0.75rem + 5px);
     line-height: 1.5;
 
     .ng-select-container {
